Added the code to read and display currently installed games in the Xbox library

--- a/SteamGridDB.Xbox/SteamGridDB.Xbox.csproj
+++ b/SteamGridDB.Xbox/SteamGridDB.Xbox.csproj
@@ -102,9 +102,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\InverseBooleanToVisibilityConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\GameEntry.cs" />
+    <Compile Include="Models\GamePlatform.cs" />
     <Compile Include="PrimaryWidget.xaml.cs">
       <DependentUpon>PrimaryWidget.xaml</DependentUpon>
     </Compile>
