Added logic to download new images from SteamGridDB and backup/restore functionality for original images

--- a/SteamGridDB.Xbox/SteamGridDB.Xbox.csproj
+++ b/SteamGridDB.Xbox/SteamGridDB.Xbox.csproj
@@ -103,6 +103,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\InverseBooleanToVisibilityConverter.cs" />
+    <Compile Include="Models\GridImageItem.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
